welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:7: error: type mismatch;
 found   : Unit
 required: Int
    outcome=outcome+1
           ^teaParty:6: error: type mismatch;
 found   : Unit
 required: Int
  if ((candy/2>=tea)||(tea/2>=candy)){
  ^